--- a/package.json
+++ b/package.json
@@ -6,16 +6,47 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
-    "expo": "~48.0.6",
+    "@react-navigation/native": "^6.1.6",
+    "axios": "^1.3.4",
+    "expo": "^48.0.9",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-paper": "^5.5.1",
+    "react-native-paper-dropdown": "^1.0.7",
+    "react-native-safe-area-context": "^4.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react-native": "^12.1.2",
+    "jest": "^29.5.0",
+    "jest-when": "^3.5.2",
+    "react-test-renderer": "^18.2.0"
+  },
+  "jest": {
+    "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!@react-native|react-native)"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   },
   "private": true
 }
